force-app/main/default/objects/Vyuha_Formation__c/Vyuha_Formation__c.object-meta.xml
<CustomObject>
    <description>Definition of Vyuha jobs for scheduling and execution</description>
    <label>Vyuha Formation</label>
    <nameField>
        <label>Vyuha Formation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vyuha Formations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>