force-app/main/default/objects/Vyuha_Formation__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a Formation is active and runnable</description>
    <inlineHelpText>Indicates if a Formation is active and runnable</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>