force-app/main/default/objects/Vyuha_Formation__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>Number of records that each batch should execute - max 9999</description>
    <inlineHelpText>Number of records that each batch should execute - max 9999</inlineHelpText>
    <label>Batch Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>