force-app/main/default/objects/Vyuha_Formation__c/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <description>API Name of Flow to Execute</description>
    <inlineHelpText>API Name of Flow to Execute</inlineHelpText>
    <label>Flow API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>