force-app/main/default/objects/Vyuha_Formation__c/fields/Flow_Input_Variable_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Input_Variable_Name__c</fullName>
    <description>API Field Name on SOQL Query for input into Flow</description>
    <inlineHelpText>API Field Name on SOQL Query for input into Flow</inlineHelpText>
    <label>Flow Input Variable Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>