force-app/main/default/objects/Vyuha_Formation__c/fields/Flow_Interview_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Interview_Name__c</fullName>
    <description>Interview Name of Flow to Execute</description>
    <inlineHelpText>Interview Name of Flow to Execute</inlineHelpText>
    <label>Flow Interview Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>