force-app/main/default/objects/Vyuha_Formation__c/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <description>List of Notification Email addresses (comma delimited)</description>
    <inlineHelpText>List of Notification Email addresses (comma delimited)</inlineHelpText>
    <label>Notification Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>