force-app/main/default/objects/Vyuha_Formation__c/fields/Soql_Statement__c.field-meta.xml
<CustomField>
    <fullName>Soql_Statement__c</fullName>
    <description>SOQL Statement to execute and send into Flow - max 4000 characters</description>
    <inlineHelpText>SOQL Statement to execute and send into Flow - max 4000 characters</inlineHelpText>
    <label>Soql Statement</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>