force-app/main/default/objects/Vyuha_Formation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Formation Status</description>
    <inlineHelpText>Formation Status</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>